<resources>

    <!-- Common strings -->
    <string name="app_name">Showcase</string>

    <string name="developer_name">\u2301 Created in full by Liam De Grey \u2301</string>

    <string name="back">Back</string>

    <!-- Views -->
    <string name="toolbar_home_contentDescription">Home</string>
    <string name="toolbar_extra_contentDescription">Extra</string>

    <!-- Launch strings -->
    <string name="launch_description">This application has been created twice using two different architecture patterns:\n\u2022 <b>Model-View-Presenter</b> <small><i>AKA</i></small> <b>MVP</b>\n\u2022 <b>Model-View-ViewModel</b> <small><i>AKA</i></small> <b>MVVM</b>\n\nBoth paths show the same application, just implemented in different ways.</string>
    <string name="launch_mvpButton">MVP</string>
    <string name="launch_mvvmButton">MVVM</string>

    <!-- Home strings -->
    <string name="home_title">Home</string>
    <string name="home_noContent">Sorry, but we couldn\'t seem to load any great jokes for you! Click here to refresh.</string>
    <string name="home_welcomeMessage">Welcome to the Joke center!</string>

    <!-- Drawer strings -->
    <string name="drawer_about">About</string>
    <string name="drawer_acknowledgements">Acknowledgements</string>
    <string name="drawer_likedTheSplashScreen">Liked the Splash?</string>

    <!-- About strings -->
    <string name="about_title">About</string>
    <string name="about_body">Showcase-Android is an incredibly simple sample of how I make Android applications.\nThis app has two separate implementations, each based on an architectural pattern of either\n<b>Model-View-Presenter</b> <small><i>AKA</i></small> <b>MVP</b>\nor\n<b>Model-View-ViewModel</b> <small><i>AKA</i></small> <b>MVVM</b>\nOn inspection of the source code you\'ll notice the project is completely based on Kotlin, and uses RxJava where observers are required (Network requests, EditText updates etc.). I use SVG drawables to replace the <i>beefier</i> PNG files. This reduces the APK size greatly.\nI plan on updating this application regularly to ensure it keeps up-to-date with the latest trends and technologies.\n\nCheck back later to see how it develops or get in touch at\nEmail: liam.degrey@gmail.com</string>
    <string name="about_body_link">liam.degrey@gmail.com</string>
    <string name="about_email_choose_client">Send email with:</string>
    <string name="about_email_subject">Nice app dude!</string>

    <!-- Acknowledgements strings -->
    <string name="acknowledgements_title">Acknowledgements</string>

    <!-- Search strings -->
    <string name="search_title">Search</string>
    <string name="search_hint">Enter search term</string>
    <string name="search_noContent">Sorry, but we couldn\'t seem to find any great jokes that fit that term! Try search for something else or come back later and try again.</string>

</resources>
