<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_36"
        android:paddingRight="@dimen/padding_36">

        <TextView
            android:id="@+id/drawer_acknowledgementsBtn"
            style="@style/Text.Body1.Pressable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_12"
            android:text="@string/drawer_acknowledgements"/>

        <View style="@style/Divider.Horizontal.Colored"/>

        <TextView
            android:id="@+id/drawer_likedTheSplashBtn"
            style="@style/Text.Body1.Pressable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_12"
            android:text="@string/drawer_likedTheSplashScreen"/>

    </LinearLayout>

    <TextView
        style="@style/Text.Body2.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_4"
        android:text="@string/developer_name"/>

</merge>