<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/launch_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/padding_36"
        android:paddingRight="@dimen/padding_36"
        android:paddingTop="@dimen/padding_36"
        android:text="@string/launch_description"
        app:layout_constraintBottom_toTopOf="@id/launch_mvpButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/launch_mvpButton"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/padding_8"
        android:layout_marginStart="@dimen/padding_36"
        android:layout_marginTop="@dimen/padding_36"
        android:text="@string/launch_mvpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/launch_mvvmButton"
        app:layout_constraintTop_toBottomOf="@id/launch_description"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/launch_mvvmButton"
        style="@style/Button.Secondary"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/padding_36"
        android:layout_marginStart="@dimen/padding_8"
        android:text="@string/launch_mvvmButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/launch_mvpButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/launch_mvpButton"/>

</android.support.constraint.ConstraintLayout>